Adds more testimonials

--- a/index.html
+++ b/index.html
@@ -575,6 +575,150 @@
           <div class="card-body">
             <div class="reviewer">
               <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C5603AQFQWCiuR20J4g/profile-displayphoto-shrink_800_800/0?e=1579737600&v=beta&t=-VhEcy9btyfaqErYbD0mK-jxJql0MhwGeMQJZIABddU"
+                alt="Joe profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/josephplukarski/">Joseph
+                  Plukarski</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                API Support Specialist, former student
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              I was Nelly's student from July 2018-October 2018 at the Northwestern Full-Stack Coding Bootcamp. At the
+              time, I was a freelance blog writer and lyric transcriber and delivered for Postmates. I was desperately
+              looking for a career change. I had managed websites via WordPress before, but had no experience with
+              coding outside of very basic HTML and CSS. When first making this transition into the world of web
+              developing it can be very overwhelming. There are so many acronyms, libraries, frameworks, languages out
+              there that imposter syndrome is nearly impossible to avoid. Nelly not only taught us how to code, but he
+              taught us patience and perseverance. I saw firsthand Nelly get excited over error messages or scripts not
+              working as expected. This helped me change my mindset from being intimidated and frustrated when things
+              don't work as expected to being excited at opportunities to solve problems through debugging code.
+              <br />
+              <br />
+              I originally went to college to become a High School English Teacher. I quickly decided that I did not
+              have a passion for teaching, but this same passion that I lacked I can clearly see in Nelly. He takes his
+              time to get to know his students individually and what motivates them, and how they best learn. He also
+              approaches the classroom more like getting together with a friend who is showing you something. I really
+              appreciated everything Nelly did for us and would take another class with him 10/10 times if given the
+              opportunity!
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
+                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                alt="Shauna profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer"
+                  href="https://www.linkedin.com/in/shauna-ono-bb410226/">Shauna Ono</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                Web Designer, Social Media Manager, former student
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              I was fortunate enough to have Nelly as my instructor at the UC Davis coding bootcamp in Sacramento,
+              California.
+
+              His passion and dedication to teaching and his students is impressive to say the least. Nelly is an
+              amazing teacher able to tailor his teaching strategies to each individual, and is very patient with a "you
+              can do it" attitude. His optimism is catagious and makes you feel like you can succeed no matter what. He
+              always went above and beyond what was required, including being available for questions or tutoring at any
+              time day or night.
+
+              I highly recommend Nelly to anyone wanting to learn coding to add to their skill set or as a career.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C5603AQEBPck0FtS4XQ/profile-displayphoto-shrink_800_800/0?e=1579737600&v=beta&t=-tmR1Aewez6gojBG928bV0cT_re-ZFLlUZHs9IJLvXA"
+                alt="Yelena profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/yelena-guliyeva/">Yelena
+                  Guliyeva</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                Full-stack Web Developer, former student
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              Nelly is a creative instructor with a knack for getting students to listen. He is such a good combination
+              of a professional knowledgable developer and a humourous interesting teacher. His lectures have always
+              been very informative and interesting and have never been boring. He is a great instructor and I've
+              learned a lot! Nelly is probably one of the best if not maybe the best instructor I've ever had.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C4D03AQFTfVpxEfI0wA/profile-displayphoto-shrink_800_800/0?e=1579737600&v=beta&t=g3mx5dQ2Fr01_clX4K_4MlN_2EjkTHbvR-sn0OBe7qI"
+                alt="Eran profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/eran-dromy/">Eran
+                  Dromy</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                Haptic Designer, former student
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              I consider myself lucky to have had Nelly Sugu as an instructor during my July 2018 Full Stack Web
+              Development course at Northwestern University. Nelly has a true passion and talent for teaching. His
+              optimism, attentiveness and innate curiosity make him a wonderful instructor who motivates his students to
+              excel. On the human level, Nelly is an amazing person who cares for his students and their success, and I
+              have found in him a true and inspiring friend.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C5603AQGbJc28WUo_eQ/profile-displayphoto-shrink_800_800/0?e=1579737600&v=beta&t=HqDdN-yinKlejr5_qEnqxCFmCvVLPeckiM-RPlVfAbM"
+                alt="Chris profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer"
+                  href="https://www.linkedin.com/in/chris-grant-8b4314a/">Chris Grant</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                Director of Project Management, former student
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              I walked into Northwestern University's Coding Boot Camp in 2018 with a certain mindset of what kind of
+              experience I should be preparing myself for, what I aimed to get out of it, and what I expected the next
+              12 weeks of my life to approximate. Nelly was lucky enough to be the point person for me on this
+              experience, and he was going to shape what I was able to learn in this accelerated time schedule, with
+              very little experience into the development world that I was preparing for. Nelly is a great teacher, he
+              fundamentally understands what he is trying to help you learn (and knows how to search for the answer when
+              he doesn't know), and he has the problem solving skills to break apart an issue into discrete finite
+              problems that can be solved one at a time. Those qualities are to be expected of a great teacher, but what
+              made Nelly stand out from anyone else were the reasons he chose to stop and spend hours at a time helping
+              you solve a single problem. Nelly was able to convince each and every one of us, that regardless of your
+              experience, mindset, and attitude - everyone was teachable, and everyone could learn. The technical
+              details come and go, and search engines go a long way - but teachers who leave behind moments are the ones
+              worth trusting your time and effort to. Nelly is one of them (thank you, Nelly!).
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
                 src="https://media.licdn.com/dms/image/C5603AQEH9eB7lxmrKw/profile-displayphoto-shrink_800_800/0?e=1579737600&v=beta&t=YGdPCyJxQ5ROVAxZ7BdUL2cXq5AvY5hImSDX7JDqQn4"
                 alt="Madhav profile picture">
               <h5 class="card-title">
