--- a/index.html
+++ b/index.html
@@ -916,9 +916,7 @@
         <div class="card" style="width: 18rem;">
           <div class="card-body">
             <div class="reviewer">
-              <img class="reviewer-img-thumbnail"
-                src="https://media-exp1.licdn.com/dms/image/C5603AQFKIJep3imHeA/profile-displayphoto-shrink_200_200/0?e=1587600000&v=beta&t=mBhLYRkXwNgEpk6t7z2fVLzUvTj5M4QQT-PCmKBANLU"
-                alt="Ryan profile picture">
+              <img class="reviewer-img-thumbnail" src="./resources/ryancanty.jpeg" alt="Ryan profile picture">
               <h5 class="card-title">
                 <a target="_blank" rel="noopener noreferrer"
                   href="https://www.linkedin.com/in/ryan-canty-a49b9b35/">Ryan Canty</a>
