--- a/test.html
+++ b/test.html
@@ -9,6 +9,9 @@
 
 <body>
     <h1>Welcome to Nelly's Portfolio</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque dolor reiciendis voluptatum dolore dolorum
+        placeat odio fuga commodi earum? Perspiciatis quidem corrupti laudantium, autem hic vel assumenda suscipit
+        eaque. In.</p>
 </body>
 
 </html>
