--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
     <!--Reviews-->
     <section id="testimonials">
       <h2 class="section-header">Testimonials</h2>
-      <div class="section-carousel">
+      <!-- <div class="section-carousel"> -->
         <div id="testimonials-container">
           <!-- Joe Plukarski -->
-          <div class="card card_joe">
+          <div class="card span_2_row">
             <div class="card-body card_content">
               <div class="reviewer">
                 <img
@@ -213,7 +213,7 @@
           </div>
           
           <!-- Ifra -->
-          <div class="card card_ifra">
+          <div class="card span_2_col">
             <div class="card-body card_content">
               <div class="reviewer">
                 <img
@@ -725,7 +725,7 @@
           </div>
 
           <!-- Michelle Jung -->
-          <div class="card card_michelle">
+          <div class="card span_2_row">
             <div class="card-body card_content">
               <div class="reviewer">
                 <img
@@ -789,7 +789,7 @@
             </div>
           </div>
           <!-- Samekh Resh -->
-          <div class="card card_samekh">
+          <div class="card span_2_col">
             <div class="card-body card_content">
               <div class="reviewer">
                 <img
@@ -889,7 +889,7 @@
           </div>
 
           <!-- Ibrahim Gurhan -->
-          <div class="card card_ibra">
+          <div class="card span_2_col">
             <div class="card-body card_content">
               <div class="reviewer">
                 <img
@@ -1137,7 +1137,7 @@ Thank you Nelly.
           </div>
 
           <!-- Nicholas Scherer -->
-          <div class="card card_nicholas">
+          <div class="card span_2_col">
             <div class="card-body card_content">
               <div class="reviewer">
                 <img
@@ -1343,7 +1343,7 @@ Thank you Nelly.
             </div>
           </div>
           <!-- Falon -->
-          <div class="card card_falon">
+          <div class="card span_2_col">
             <div class="card-body card_content">
               <div class="reviewer">
                 <img
@@ -1434,7 +1434,7 @@ Thank you Nelly.
             </div>
           </div>
           <!-- Haddassah -->
-          <div class="card card_haddassah">
+          <div class="card span_2_row">
             <div class="card-body card_content">
               <div class="reviewer">
                 <img
@@ -1490,7 +1490,7 @@ Thank you Nelly.
             </div>
           </div>
           <!-- Peter Kohler -->
-          <div class="card card_peter">
+          <div class="card span_2_col">
             <div class="card-body card_content">
               <div class="reviewer">
                 <img
@@ -1598,7 +1598,7 @@ Thank you Nelly.
           </div>
 
           <!-- Holly Zoba -->
-          <div class="card card_holy">
+          <div class="card span_2_row">
             <div class="card-body card_content">
               <div class="reviewer">
                 <img
@@ -1755,7 +1755,7 @@ Thank you Nelly.
             </div>
           </div>
           <!-- Chris Grant -->
-          <div class="card card_chris">
+          <div class="card span_2_col">
             <div class="card-body card_content">
               <div class="reviewer">
                 <img
@@ -1841,7 +1841,7 @@ Thank you Nelly.
           </div>
 
           <!-- Sherif -->
-          <div class="card card_sherif">
+          <div class="card span_2_col">
             <div class="card-body card_content">
               <div class="reviewer">
                 <img
@@ -1991,7 +1991,7 @@ Thank you Nelly.
 
           <!-- Co-workers -->
           <!-- Joseph Lee -->
-          <div class="card card_lee">
+          <div class="card span_2_col">
             <div class="card-body card_content">
               <div class="reviewer">
                 <img
@@ -2067,7 +2067,7 @@ Thank you Nelly.
             </div>
           </div>
           <!-- Stan Crump -->
-          <div class="card card_stan">
+          <div class="card span_2_col">
             <div class="card-body card_content">
               <div class="reviewer">
                 <img
@@ -2268,7 +2268,7 @@ Thank you Nelly.
               </p>
             </div>
           </div>
-        </div>
+        <!-- </div> -->
       <!-- </div> -->
     </section>
 
