--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
         </a>
       </div>
 
+      <div class="numbers">
+        <div id="total_students">
+          <p class="number">250+</p>
+          <p class="number_desc">Beginners turned web developers</p>
+        </div>
+        <div id="amazon_engineers">
+          <p class="number">130+</p>
+          <p class="number_desc">are now Software Engineers at Amazon</p>
+        </div>
+      </div>
+
       <!-- <div class="learn_call_to_action">
         <a
           href="#contact"
