add alert for online courses & remove numbers

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </a>
       </div>
 
-      <div class="numbers">
+      <!-- <div class="numbers">
         <div id="total_students">
           <p class="number">250+</p>
           <p class="number_desc">Beginners turned web developers</p>
@@ -109,7 +109,7 @@
           <p class="number">130+</p>
           <p class="number_desc">are now Software Engineers at Amazon</p>
         </div>
-      </div>
+      </div> -->
 
       <!-- <div class="learn_call_to_action">
         <a
@@ -130,6 +130,7 @@
 
     <!--Reviews-->
     <section id="testimonials">
+      
       <h2 class="section-header">Testimonials</h2>
       <!-- <div class="section-carousel"> -->
         <div id="testimonials-container">
