--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
     <!--About-->
     <section id="about">
+      
       <p class="about-name">Hi,</p>
       <p class="about-name">I am Nelly</p>
       <p id="about-tagline">
@@ -110,6 +111,12 @@
           <p class="number_desc">are now Software Engineers at Amazon</p>
         </div>
       </div> -->
+      <div class="cta">
+      <div class="alert alert-success" role="alert">
+        <strong>&#8987;</strong> Online courses coming &#128284;.
+        
+      </div>
+    </div>
 
       <!-- <div class="learn_call_to_action">
         <a
