added podcast & yt channel bitly links

--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
           <li class="nav-item">
             <a class="nav-link" href="#testimonials">Testimonials</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://walkthetalkteacher.nellysugu.com/apple">Listen on Apple Podcasts</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://walkthetalkteacher.nellysugu.com/spotify">Listen on Spotify</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://walkthetalkteacher.nellysugu.com/youtube">Watch on YouTube</a>
+          </li>
           <!-- <li class="nav-item">
             <a class="nav-link" href="#projects">Projects</a>
           </li> -->
@@ -68,9 +77,10 @@
 
     <!--About-->
     <section id="about">
+<p></p>
       
-      <p class="about-name">Hi,</p>
-      <p class="about-name">I am Nelly</p>
+      <!-- <p class="about-name">Hi,</p>
+      <p class="about-name">I am Nelly</p> -->
       <p id="about-tagline">
         I <span id="about-heart">&hearts;</span> building cool stuff & teaching
         others how to do it
