--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--Our own CSS-->
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Nelly Sugu - Web Development Instructor for Beginners</title>
+    <title>👁Nelly👋🏾. U🪨 </title>
   </head>
 
   <body>
@@ -31,7 +31,7 @@
       <div class="navbar-brand" id="brand-container">
         <a style="color: white; text-decoration: none" href="#">
           <p>Nelly Sugu</p>
-          <p id="brand-work">Web Development Instructor for Beginners</p>
+          <p id="brand-work">Digital Self-Reliance Coach</p>
         </a>
       </div>
       <button
@@ -123,7 +123,8 @@
       </div> -->
       <div class="cta">
       <div class="alert alert-success" role="alert">
-        <strong>&#8987;</strong> Online courses coming &#128284;.
+        <a href="https://walkthetalkteacher.nellysugu.com/digital-self-reliance-university" target="_blank" rel="noopener noreferrer">Digital Self-Reliance University 🎓</a>
+        
         
       </div>
     </div>
