added dittofi playlist

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
       <iframe
         width="560"
         height="315"
-        src="https://walkthetalkteacher.nellysugu.com/visit-rwanda-vr"
-        title="YouTube video player"
+        src="https://walkthetalkteacher.nellysugu.com/webdev-for-beginners"
+        title="Web Developer Beginner Series by Nelly Sugu, Digital Self-Reliance Coach"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
