--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/josephplukarski/"
                   >Joseph Plukarski</a
                 >
@@ -263,6 +264,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/percell-gaskins-8a644014b/"
                   >Parcell Gaskins</a
                 >
@@ -296,6 +298,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/ifraaijaz/"
                   >Ifra Aijaz</a
                 >
@@ -341,6 +344,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/isabel-servin/"
                   >Isabel Servin</a
                 >
@@ -382,6 +386,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/walterlthomas/"
                   >Walter Thomas</a
                 >
@@ -416,6 +421,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/morganelimills/"
                   >Morgan Mills</a
                 >
@@ -455,6 +461,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/kevin-woulfe/"
                   >Kevin Woulfe</a
                 >
@@ -492,6 +499,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/justin-n-bruce/"
                   >Justin Bruce</a
                 >
@@ -528,6 +536,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/maria-nieves-40b932192/"
                   >Maria Nieves Mills</a
                 >
@@ -561,6 +570,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/charles-grogan/"
                   >Charlie Grogan</a
                 >
@@ -602,6 +612,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/britnell/"
                   >Brit Nell</a
                 >
@@ -637,6 +648,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/romanpennwebmc/"
                   >Roman Penn</a
                 >
@@ -673,6 +685,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/luximeng"
                   >Luxi Meng</a
                 >
@@ -710,6 +723,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/henwin-cuffy/"
                   >Henwin Cuffy</a
                 >
@@ -745,6 +759,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/shannonleeedgar/"
                   >Shannon Edgar</a
                 >
@@ -784,6 +799,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/jackson-harris-iii-a2546845/"
                   >Jackson Harris III</a
                 >
@@ -826,6 +842,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/hi-michelle/"
                   >Michelle Jung</a
                 >
@@ -888,6 +905,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/nicolas-nico-cueva-19b4a15a/"
                   >Samekh Resh</a
                 >
@@ -939,6 +957,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/michael-mirkovic/"
                   >Michael Mirkovic</a
                 >
@@ -975,6 +994,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/kathyle-dev/"
                   >Kathy Le</a
                 >
@@ -1007,6 +1027,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/ibrahimgurhan/"
                   >Ibrahim Gurhan</a
                 >
@@ -1051,6 +1072,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/sterling-meriweather/"
                   >Sterling Meriweather</a
                 >
@@ -1085,6 +1107,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/dannymanandhar/"
                   >Danny Manandhar</a
                 >
@@ -1118,6 +1141,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/adanieljohnson/"
                   >Anthony Johnson</a
                 >
@@ -1159,6 +1183,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/kelsonsmith/"
                   >Kelson Smith</a
                 >
@@ -1194,6 +1219,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/sarah-lichy-62080118b/"
                   >Sarah Lichy</a
                 >
@@ -1229,6 +1255,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/sam-holtzman/"
                   >Samuel Holtzman</a
                 >
@@ -1267,6 +1294,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/lateef-raheem-75577179/"
                   >Lateef Raheem</a
                 >
@@ -1303,6 +1331,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/nicholas-scherer/"
                   >Nicholas Scherer</a
                 >
@@ -1344,6 +1373,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/clayvis-rawlins-28b93b11a/"
                   >Clay Rawlins</a
                 >
@@ -1385,6 +1415,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/timothy-olowookere-517265106/"
                   >Timothy Olowookere</a
                 >
@@ -1421,6 +1452,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/nicolas-nico-cueva-19b4a15a/"
                   >Nico Cueva</a
                 >
@@ -1456,6 +1488,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/mufasaaa/"
                   >Stephanie Mustari</a
                 >
@@ -1492,6 +1525,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/dallybenjamin/"
                   >Benjamin Dally</a
                 >
@@ -1530,6 +1564,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/falon-darville/"
                   >Falon Darville</a
                 >
@@ -1583,6 +1618,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/colin-g-b551b379/"
                   >Collin Goodale</a
                 >
@@ -1623,6 +1659,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/haddassah-mendoza-elias-03273837/"
                   >Haddassah Mendoza-Elias</a
                 >
@@ -1678,6 +1715,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/peter-kohler/"
                   >Peter Kohler</a
                 >
@@ -1721,6 +1759,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/vanessa-g%C3%B3mez-629aa182/"
                   >Vanessa Gómez</a
                 >
@@ -1750,6 +1789,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/gregorydeyoung/"
                   >Gregory DeYoung</a
                 >
@@ -1781,6 +1821,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/hollyzoba/"
                   >Holly Zoba</a
                 >
@@ -1829,6 +1870,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/shauna-ono-bb410226/"
                   >Shauna Ono</a
                 >
@@ -1864,6 +1906,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/yelena-guliyeva/"
                   >Yelena Guliyeva</a
                 >
@@ -1895,6 +1938,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/eran-dromy/"
                   >Eran Dromy</a
                 >
@@ -1932,6 +1976,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/chris-grant-8b4314a/"
                   >Chris Grant</a
                 >
@@ -1982,6 +2027,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/madhavparekh/"
                   >Madhav Parekh</a
                 >
@@ -2017,6 +2063,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/sherif-mahmoud-93605b2/"
                   >Sherif Mahmoud
                 </a>
@@ -2061,6 +2108,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/maksym-galyliak-95464551/"
                   >Maksym Galyliak</a
                 >
@@ -2094,6 +2142,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/daniel-feinstat/"
                   >Daniel Feinstat</a
                 >
@@ -2129,6 +2178,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/andyxwood/"
                   >Andy Wood</a
                 >
@@ -2167,6 +2217,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/josephleecy/"
                   >Joseph Lee</a
                 >
@@ -2213,6 +2264,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/jonathon-hinchley/"
                   >Jonathon Hinchley</a
                 >
@@ -2252,6 +2304,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/stan-crump-freelancer/"
                   >Stan Crump</a
                 >
@@ -2295,6 +2348,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/michaeldoh/"
                   >Michael Doherty</a
                 >
@@ -2328,6 +2382,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/leo-qiu/"
                   >Leo Qiu</a
                 >
@@ -2365,6 +2420,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/treighton/"
                   >Treighton Mauldin</a
                 >
@@ -2397,6 +2453,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/carlilejordan/"
                   >Jordan Carlile</a
                 >
@@ -2435,6 +2492,7 @@
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
+                  class="text-primary"
                   href="https://www.linkedin.com/in/ryan-canty-a49b9b35/"
                   >Ryan Canty</a
                 >
