--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!--Our own CSS-->
     <link rel="stylesheet" href="styles.css" />
 
-    <title>👁Nelly👋🏾. U🪨</title>
+    <title>Nelly Sugu</title>
   </head>
 
   <body>
@@ -45,7 +45,9 @@
       <div class="navbar-brand" id="brand-container">
         <a style="color: white; text-decoration: none" href="#">
           <p>Nelly Sugu</p>
-          <p id="brand-work">Digital Self-Reliance Coach</p>
+          <p id="brand-work">
+            Mentor & coach of absolute beginners in web development
+          </p>
         </a>
       </div>
       <button
@@ -71,34 +73,12 @@
           <li class="nav-item">
             <a class="nav-link" href="#testimonials">Testimonials</a>
           </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="https://walkthetalkteacher.nellysugu.com/apple"
-              >Listen on Apple Podcasts</a
-            >
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="https://walkthetalkteacher.nellysugu.com/spotify"
-              >Listen on Spotify</a
-            >
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="https://walkthetalkteacher.nellysugu.com/youtube"
-              >Watch on YouTube</a
-            >
-          </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#projects">Projects</a>
-          </li> -->
 
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
-          </li> -->
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.linkedin.com/in/nellysugu/"
+              >LinkedIn</a
+            >
+          </li>
         </ul>
       </div>
     </nav>
@@ -115,15 +95,15 @@
       <iframe
         width="560"
         height="315"
-        src="https://walkthetalkteacher.nellysugu.com/webdev-for-beginners"
-        title="Web Developer Beginner Series by Nelly Sugu, Digital Self-Reliance Coach"
+        src="https://www.youtube.com/embed/giRJQ-f4wlA"
+        title="Web Developer Beginner Series by Nelly Sugu"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
       ></iframe>
 
       <div id="about-social-media">
-        <a
+        <!-- <a
           target="_blank"
           rel="noopener noreferrer"
           href="https://www.instagram.com/nellysugu/"
@@ -133,8 +113,8 @@
             src="./resources/instagram-logo.png"
             alt="instagram logo"
           />
-        </a>
-        <a
+        </a> -->
+        <!-- <a
           target="_blank"
           rel="noopener noreferrer"
           href="https://www.linkedin.com/in/nellysugu/"
@@ -145,7 +125,7 @@
             alt="linkedin logo"
             srcset=""
           />
-        </a>
+        </a> -->
       </div>
 
       <!-- <div class="numbers">
@@ -161,10 +141,10 @@
       <div class="cta">
         <div class="alert alert-success" role="alert">
           <a
-            href="https://walkthetalkteacher.nellysugu.com/digital-self-reliance-university"
+            href="https://learnwithnelly.hashnode.dev/"
             target="_blank"
             rel="noopener noreferrer"
-            >Digital Self-Reliance University 🎓</a
+            >Learn with Nelly 🎓</a
           >
         </div>
       </div>
