added blog link

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div class="cta">
         <div class="alert alert-success" role="alert">
           <a
-            href="https://learnwithnelly.hashnode.dev/"
+            href="https://blog.nellysugu.com/"
             target="_blank"
             rel="noopener noreferrer"
             >Learn with Nelly 🎓</a
