--- a/index.html
+++ b/index.html
@@ -71,11 +71,31 @@
             <a class="nav-link" href="#">About </a>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="#testimonials">Testimonials</a>
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              class="nav-link"
+              href="#testimonials"
+              >Testimonials</a
+            >
+          </li>
+
+          <li>
+            <a
+              class="nav-link"
+              href="https://blog.nellysugu.com/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Blog</a
+            >
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/nellysugu/"
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              class="nav-link"
+              href="https://www.linkedin.com/in/nellysugu/"
               >LinkedIn</a
             >
           </li>
